[metadata]
name = jax_bessel
version = 0.1
author = Arthur Loureiro (All credits to @DavidDevoogdt)
author_email = arthur.loureiro@fysik.su.se
description = Jax wrapper for Scipy Bessel functions
long_description = file: README.md 
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/arthurmloureiro/jax-bessel
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.10
install_requires =
    jax>=0.4.10
    jaxlib>=0.4.10
    scipy>=1.10.0
packages = find:

